# Menu

./: Makefile  README.md  example.env  pyproject.toml
config/: settings.py  urls.py
src/core/: admin.py  models.py  views.py
src/core/migrations/: 0001_initial.py  0002_menu_slug.py  0003_alter_page_options_remove_page_order_menuitem.py  0004_menuitem_menu_alter_menuitem_page.py  0005_rename_menu_page_menus_menuitem_parent.py  0006_alter_menuitem_menu.py  0007_alter_page_name.py  0008_alter_menuitem_parent.py  0009_remove_menu_slug_alter_menu_name.py
src/core/templatetags/: drawing.py
templates/core/: base.html  menu.html  menu_item.html  page.html  pages.html
