[tool.poetry]
name = "menu"
version = "0.1.0"
description = ""
authors = ["hushchyn507 <hushchyn507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
asgiref = "^3.8.1"
wheel = "^0.43.0"
pillow = "^10.4.0"
django-environ = "^0.11.2"
psycopg2-binary = "^2.9.9"
django-debug-toolbar = "^4.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
